fix: text wrap

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -158,6 +158,12 @@ body {
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
 }
 
+@media (max-width: 768px) {
+  body {
+    overflow-x: hidden;
+  }
+}
+
 #titleDrawing {
   white-space: nowrap;
   overflow: hidden;
